test-cases/type_error.exp
Error detected during type checking of modules type_error
test-cases/type_error.wybe:1:31: Type error in call to *, argument 2
test-cases/type_error.wybe:1:31: Type error in call to *, argument 1
